# jatszohaz-algo

./: .gitignore  README.md  google_sheet_export.py  jhz_algoritmus.docx  kimittud_2024-03-11.csv  kimittud_2024-03-19.csv  pyproject.toml  pyvenv.cfg  requirements.txt  server.py  test.ipynb  uniformity_table.xlsx
Scripts/: activate  activate.bat
src/: clean_data.py  constants.py  gsheet_download.py  utils.py
templates/: base.html
templates/partials/: name-selector.html  result.html
