[project]
name = "jatszohaz-algo"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "Flask>=3.0.3,<4",
    "numpy>=2.1.1,<3",
    "gspread>=6.1.2,<7",
    "google-auth>=2.35.0,<3",
    "pandas>=2.2.3,<3",
    "python-dotenv>=1.0.1,<2",
    "gunicorn>=23.0.0,<24",
    "watchdog>=5.0.3,<6",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
